resource-defination/ingress/aws-ingress-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert:
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: 443
spec:
  selector:
    name: backend
  
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 3000
      protocol: tcp
