resource-defination/ingress/svc.yml
apiVersion: v1
kind: Service
metadata:
   name: ingress
   namespace: ingress-space
spec:
   type: NodePort
   ports:
     - targetPort: 80
       nodePort: 30080
       port: 80
   selector:
      name: nginx-ingress
