resource-defination/ingress/nginx-ingress-tls.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
    replicas: 3
    selector:
       matchLabels:
           name: nginx-ingress
    template:
      metadata:
         labels:
            name: nginx-ingress
      spec:
        containers:
           -  name: nginx
              image: nginx
              ports:
                 - name: http
                   containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: nginx
spec:
   selector:
      name: nginx-ingress
   type: ClusterIP
   ports:
     - name: http
       port: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: nginx-routing
spec:
    tls:
      - secretName: nginx-ingress-tls
        hosts:
           - nginx-ingress.com
    rules:
        - host: nginx-ingress.com
          http:
            paths:
                - path: /
                  backend:
                    serviceName: nginx
                    servicePort: 80
