resource-defination/ingress/total-ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: demo-nginx
        image: "nginx"
---
kind: Service
apiVersion: v1
metadata:
  name: demo-nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx 
    cert-manager.io/issuer: letsencrypt-kube
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-demo
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - app.example.com
    secretName: app-example-com-tls
